--- a/less/faculty/nav.less
+++ b/less/faculty/nav.less
@@ -83,10 +83,9 @@
   
   .sub-menu {
     position: absolute;
-    top: 2.75em;
+    top: 2.8em;
     left: 0em;
     right:0em;
-    margin-top: 1px;
     z-index: 100;
     background: #fff;
     .border-radius(0px 0px 4px 4px);
@@ -158,9 +157,9 @@
     
     &:hover {
       color: @linkColorHover;
-      padding-left:4.3%;
+      padding-left:4.5%;
       padding-right: 2%;
-      margin-left: -4.3%;
+      margin-left: -4.5%;
       margin-right: -2%;
       background:  #FFF5B8;
       border-top: 1px solid #E1D8A4;
