--- a/less/faculty/page-elements/base.less
+++ b/less/faculty/page-elements/base.less
@@ -8,6 +8,13 @@
  font-size:1.5em;
 }
 
+.rich-text h4 {
+  margin-top: 0.25em;
+  font-size: 1.2em;
+}
+
+
+
 .no-inlinesvg {
 
   // Blade Logo
