--- a/less/faculty/pages/layout.less
+++ b/less/faculty/pages/layout.less
@@ -8,7 +8,7 @@
       -webkit-box-sizing: border-box;
       -moz-box-sizing:border-box;
       width:100%;
-      max-width: 105em;
+//      max-width: 105em;
   }
   .banner-inner .site-title {
         left:auto;
