--- a/less/framework/base/type.less
+++ b/less/framework/base/type.less
@@ -206,7 +206,7 @@ dd {
 hr {
   margin: @baseLineHeight 0;
   border: 0;
-  border-top: 1px solid @hrBorder;
+  border-top: 1px solid #ddd;
   border-bottom: 1px solid @white;
 }
 hr.softline{
