--- a/less/framework/devices/tablet.less
+++ b/less/framework/devices/tablet.less
@@ -123,8 +123,8 @@
   
 .main-navigation > li:hover > a {
     background-color: rgba(255,255,255,0.5);
-    border-bottom: 3px solid #7AC900;
-    padding-bottom: 0.35em;
+    border-bottom: 0.25em solid #7AC900;
+    padding-bottom: 0.375em;
   }
   
 .main-navigation > li.nav-current a {
